# Object-Action-Detection-Tracking

./: .gitignore
3_1_SW_Development_Guide/: SNU-SWD-SAD-01 v1.0a (SYS-TPL).docx  실외 무인 경비로봇을 위한 멀티모달 객체 인식 기술 개발-SWD-HLD-001v1.0 (SYS-TPL).docx
3_Code/: DEPTH_TRACKING_IDEA.txt  kalman_params.py  mot_module.py  snu_module_realsense.py  snu_module_realsense_zotac.py
3_Code/SNU_v1/: DEPTH_TRACKING_IDEA.txt  detector__lighthead_rcnn.py  mot__multimodal.py  mot_class.py
3_Code/SNU_v1/lighthead_rcnn/lib/: config.py
3_Code/SNU_v1/lighthead_rcnn_190510/: detector.py
3_Code/SNU_v1/lighthead_rcnn_190510/lib/: dataset.py
3_Code/SNU_v1/obsoletes/: [190509]_snu_module_realsense.py  snu_module.py
3_Code/SNU_v2/: README.md
3_Code/SNU_v2/devel/: .catkin  .rosinstall  local_setup.sh
3_Code/SNU_v2/devel/include/osr_msgs/: BoundingBox.h  Track.h  Tracks.h
3_Code/SNU_v2/devel/lib/pkgconfig/: osr_msgs.pc  snu_module.pc
3_Code/SNU_v2/src/osr/osr_msgs/: CMakeLists.txt  package.xml
3_Code/SNU_v2/src/osr/osr_msgs/msg/: Track.msg
3_Code/SNU_v2/src/snu_module/: package.xml
3_Code/SNU_v2/src/snu_module/scripts/: action_recognition_thermal.py  (+12 more)
3_Code/SNU_v3/: README.md
3_Code/SNU_v3/devel/: .catkin  setup.sh
3_Code/SNU_v3/src/snu_module/: CMakeLists.txt  package.xml
3_Code/lighthead_rcnn/lib/: config.py.old  dataset.py  network_desp.py
3_Code/lighthead_rcnn_190510/: readme_by_snu.txt
3_Code/lighthead_rcnn_190510/lib/: network_desp.py
3_Code/lighthead_rcnn_190510/lib/datasets_odgt/: MUIN.py
3_Code/new_config/: config.py
3_Code/obsoletes/: detection_model.py
(+9220 files in other folders)
