<?xml version="1.0"?>
<package>
  <name>osr_msgs</name>
  <version>0.0.0</version>
  <description>The osr_msgs package</description>

  <maintainer email="parallels@todo.todo">parallels</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>
  <run_depend>message_runtime</run_depend>

  <build_depend>std_msgs</build_depend>
  <run_depend>std_msgs</run_depend>
  <build_depend>geometry_msgs</build_depend>
  <run_depend>geometry_msgs</run_depend>
  <build_depend>nav_msgs</build_depend>
  <run_depend>nav_msgs</run_depend>
  <build_depend>realsense2_camera</build_depend>
  <run_depend>realsense2_camera</run_depend>

</package>
